bug align

--- a/mz_frontend/src/components/SystemHud.css
+++ b/mz_frontend/src/components/SystemHud.css
@@ -107,8 +107,8 @@
 
 .hologram-timer-container {
     position: relative;
-    width: 160px;
-    height: 160px;
+    width: 180px;
+    height: 180px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -118,7 +118,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    animation: rotate-clockwise 15s linear infinite;
+    animation: rotate-clockwise 30s linear infinite;
     
     /* This filter turns the white SVG into a glowing Cyan hologram */
     filter: 
